name:                fraxl
version:             0.1.0.0
synopsis:            Cached and parallel data fetching.
description:         Fraxl is a free monad designed to make concurrent data fetching easy.
homepage:            https://github.com/ElvishJerricco/fraxl
license:             BSD3
license-file:        LICENSE
author:              Will Fancher
maintainer:          willfancher38@gmail.com
copyright:           2016 Will Fancher
category:            Concurrency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Fraxl
                     , Control.Monad.Fraxl.Class
                     , Control.Monad.Trans.Fraxl
                     , Control.Monad.Trans.Fraxl.Free
                     , Control.Applicative.Fraxl.Free
                     , Data.Union
  build-depends:       base >= 4.8 && < 5
                     , async
                     , exceptions
                     , free
                     , lens
                     , mtl
                     , transformers
                     , dependent-sum
                     , dependent-map
                     , type-aligned
  default-extensions: ApplicativeDo
                    , BangPatterns
                    , ConstraintKinds
                    , DataKinds
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , DuplicateRecordFields
                    , EmptyCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , InstanceSigs
                    , LambdaCase
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NamedWildCards
                    , NoMonomorphismRestriction
                    , OverloadedLabels
                    , ParallelListComp
                    , PartialTypeSignatures
                    , PatternSynonyms
                    , PolyKinds
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
                    , UnicodeSyntax
                    , ViewPatterns
  ghc-options:         -Wall -Wno-name-shadowing -Wno-type-defaults
  default-language:    Haskell2010

test-suite examples
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , fraxl
                     , transformers
                     , mtl
  hs-source-dirs:      examples/src
  ghc-options:         -Wall
  default-language:    Haskell2010

-- test-suite monadbench
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      tests
--   main-is:             MonadBench.hs
--   other-modules:       ExampleDataSource
--   build-depends:       base
--                      , fraxl
--                      , time
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

-- test-suite fraxl-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , fraxl
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ElvishJerricco/fraxl
