cabal-version: >=1.10
name: fraxl
version: 0.2.0.0
license: BSD3
license-file: LICENSE
copyright: 2016 Will Fancher
maintainer: willfancher38@gmail.com
author: Will Fancher
homepage: https://github.com/ElvishJerricco/fraxl
synopsis: Cached and parallel data fetching.
description:
    Fraxl is a free monad designed to make concurrent data fetching easy.
category: Concurrency
build-type: Simple
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/ElvishJerricco/fraxl

library
    exposed-modules:
        Control.Monad.Fraxl
        Control.Monad.Fraxl.Class
        Control.Monad.Trans.Fraxl
        Control.Monad.Trans.Fraxl.Free
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base >=4.8 && <5,
        async >=2.1.1.1 && <2.3,
        exceptions >=0.8.3 && <0.11,
        free >=5.0.2 && <5.2,
        transformers >=0.4.2.0 && <0.6,
        mtl >=2.2.2 && <2.3,
        dependent-sum ==0.4.*,
        dependent-map >=0.2.4.0 && <0.3,
        vinyl >=0.6 && <0.9,
        type-aligned >=0.9.6 && <0.10

test-suite examples
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: examples/src
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base -any,
        fraxl -any,
        transformers -any,
        mtl -any

test-suite monadbench
    type: exitcode-stdio-1.0
    main-is: MonadBench.hs
    hs-source-dirs: tests
    other-modules:
        ExampleDataSource
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base -any,
        fraxl -any,
        time -any
